--- a/package.json
+++ b/package.json
@@ -3,9 +3,18 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@types/react-router-dom": "^4.3.1",
+    "bootstrap": "^4.3.1",
+    "jquery": "^3.3.1",
     "react": "^16.8.2",
+    "react-bootstrap": "^1.0.0-beta.5",
     "react-dom": "^16.8.2",
-    "react-scripts-ts": "3.1.0"
+    "react-popper": "^1.3.3",
+    "react-redux": "^6.0.1",
+    "react-router-dom": "^4.3.1",
+    "react-scripts-ts": "3.1.0",
+    "react-toastify": "^4.5.2",
+    "redux": "^4.0.1"
   },
   "scripts": {
     "start": "react-scripts-ts start",
@@ -18,6 +27,7 @@
     "@types/node": "^11.9.4",
     "@types/react": "^16.8.4",
     "@types/react-dom": "^16.8.2",
+    "@types/react-redux": "^7.0.1",
     "typescript": "^3.3.3"
   }
 }
