--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "@types/react-router-dom": "^4.3.1",
+    "@types/redux-form": "^7.5.2",
     "bootstrap": "^4.3.1",
     "jquery": "^3.3.1",
     "react": "^16.8.2",
@@ -14,7 +15,8 @@
     "react-router-dom": "^4.3.1",
     "react-scripts-ts": "3.1.0",
     "react-toastify": "^4.5.2",
-    "redux": "^4.0.1"
+    "redux": "^4.0.1",
+    "redux-form": "^8.1.0"
   },
   "scripts": {
     "start": "react-scripts-ts start",
